# mcp-probe-pilot

./: .gitignore  README.md  pyproject.toml
docs/: PROJECT_SPEC.md
docs/report/: introduction.md  introduction_distilled.md  links.md  literature_review.md  literature_review_distilled.md  methodology.md  methodology_distilled.md
src/mcp_probe_pilot/: __init__.py  cli.py  config.py  orchestrator.py  report_builder.py  service_client.py
src/mcp_probe_pilot/compliance/: __init__.py
src/mcp_probe_pilot/compliance_engine/: README.md  __init__.py  mcp_compliance_rules.md  models.py  validator.py
src/mcp_probe_pilot/core/: canonical_steps.py  llm_client.py  mcp-session-usage.md  mcp_client.py  mcp_session.py  sample_anthropic_client.py  service_client.py
src/mcp_probe_pilot/core/models/: __init__.py  config.py  discovery.py  evaluation.py  execution.py  gherkin_feature.py  plan.py  report.py  step_implementation.py
src/mcp_probe_pilot/discover/: __init__.py  ast_indexer.py  discoverer.py
src/mcp_probe_pilot/discovery/: README.md  __init__.py  ast_indexer.py  client.py  discoverer.py  models.py
src/mcp_probe_pilot/evaluate/: __init__.py  evaluator.py  prompts.py
src/mcp_probe_pilot/execute/: __init__.py  executor.py
src/mcp_probe_pilot/fuzzing/: README.md  __init__.py  generators.py  strategies.py
src/mcp_probe_pilot/generate/: __init__.py  gherkin_feature_generator.py  gherkin_formatter.py  prompts.py  step_implementation_generator.py
src/mcp_probe_pilot/generators/: README.md  __init__.py  base_generator.py  client_generator.py  integration_test_generator.py  llm_client.py  models.py  prompts.py  test_implementor.py  unit_test_generator.py
src/mcp_probe_pilot/ground_truth/: README.md  __init__.py  models.py  store.py
src/mcp_probe_pilot/oracle/: __init__.py
src/mcp_probe_pilot/plan/: __init__.py  planner.py  prompts.py
src/mcp_probe_pilot/reporting/: __init__.py
src/mcp_probe_pilot/reporting/templates/: .gitkeep
src/mcp_probe_pilot/results/: __init__.py
src/mcp_probe_pilot/runner/: __init__.py
src/mcp_probe_pilot/validate/: validator.py
tasks/: prd-mcp-probe.md
tests/: __init__.py  conftest.py  test_ast_indexer.py  test_cli.py  test_discovery.py  test_fuzzing.py  test_generators.py  test_ground_truth.py  test_integration_generator.py  test_service_client.py  test_test_implementor.py  test_unit_generator.py
