[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-probe-pilot"
version = "0.1.0"
description = "MCP-Probe CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "rich",
    "pydantic",
    "mcp",
]

# Links the terminal command `mcp-probe-pilot` to the `app` object inside `cli.py`
[project.scripts]
mcp-probe-pilot = "mcp_probe_pilot.cli:app"