[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "mcp-probe-pilot"
version = "0.1.0"
description = "Automated testing framework for MCP server validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Rumeth Jayasinghe"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "rich",
    "pydantic",
    "mcp",
    "httpx",
    "langchain-google-genai",
    "langchain-core",
    "gherkin-official",
]

[project.urls]
Homepage = "https://github.com/rumethj/mcp-probe-pilot"
Repository = "https://github.com/rumethj/mcp-probe-pilot"

# Links the terminal command `mcp-probe-pilot` to the `app` object inside `cli.py`
[project.scripts]
mcp-probe-pilot = "mcp_probe_pilot.cli:app"